# hot-death-uno

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  HANDOFF.md  README.md  RULES_DECISIONS.md  constraints.txt  docker-compose.yml  pyproject.toml  requirements.txt  tokens.txt.example
.claude/: launch.json
.github/workflows/: ci.yml
deploy/: README.md
deploy/nginx/: hdu.ospdy.com.conf
hdu/: __init__.py  actions.py  cards.py  cli.py  effects.py  engine.py  events.py  play.py  rng.py  scoring.py  state.py  view.py
hdu/players/: __init__.py  base.py  random_ai.py
server/: __init__.py  app.py  auth.py  catalog.py  serialize.py  session.py
server/static/: app.js  index.html  style.css
tests/: helpers.py  test_action_validation.py  test_app.py  test_auth.py  test_cards_double_skip.py  test_cards_draw_stack.py  test_cards_glasnost.py  test_cards_luck.py  test_cards_mad.py  test_cards_quitter.py  test_cards_reverse_skip.py  test_cards_scoring_specials.py  test_cards_spreader.py  test_catalog.py  test_deck.py  test_dependencies.py  test_eliminated_to_act.py  test_golden_games.py  test_m5_misc.py  test_m5_terminals.py  test_m5_two_player.py  test_random_ai.py  test_scoring.py  test_serialize.py  test_session.py  test_vanilla.py
