[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "hot-death-uno"
version = "0.2.0"
description = "Deterministic Hot Death Uno engine with an authoritative multiplayer web server."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.138.2",
    "uvicorn[standard]==0.49.0",
    "authlib==1.7.2",
    "itsdangerous==2.2.0",
    "httpx==0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
    "ruff==0.15.21",
    "mypy==1.20.2",
    "httpx2==2.7.0",
]

[project.scripts]
hdu = "hdu.cli:main"

[tool.setuptools.packages.find]
include = ["hdu*", "server*"]

[tool.setuptools.package-data]
server = ["static/*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.mypy]
python_version = "3.12"
files = ["hdu", "server"]
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["authlib.*"]
ignore_missing_imports = true
